--- a/src/pythondaq/mainwindow.ui
+++ b/src/pythondaq/mainwindow.ui
@@ -96,18 +96,31 @@
      </item>
     </layout>
    </widget>
-   <widget class="QPushButton" name="Startbutton">
+   <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>34</x>
-      <y>553</y>
-      <width>781</width>
-      <height>91</height>
+      <x>40</x>
+      <y>560</y>
+      <width>771</width>
+      <height>80</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Start</string>
-    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="Startbutton">
+       <property name="text">
+        <string>Start</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="SaveButton">
+       <property name="text">
+        <string>Save</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
